[tool.poetry]
name = "cumulus-types"
version = "0.1.0"
description = "Type definitions for Cumulus."
authors = ["Rohan Weeden <reweeden@alaska.edu>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "cumulus_types"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.8,<4"
typing-extensions = "^4.5.0"

[tool.poetry.group.gentypes.dependencies]
jsonschema-gentypes = "^2.2.3"
isort = "^5.12.0"
black = "^23.3.0"
docformatter = "^1.6.5"


[tool.isort]
profile = "black"
